RESOLVED FIXED179299
[Win] Layout Test fast/html/menuitem-element.html is failing.
https://bugs.webkit.org/show_bug.cgi?id=179299
Summary [Win] Layout Test fast/html/menuitem-element.html is failing.
Per Arne Vollan
Reported 2017-11-05 12:27:20 PST
The following layout test is failing on Windows: fast/html/menuitem-element.html
Attachments
Patch (7.70 KB, patch)
2018-03-12 18:54 PDT, Ross Kirsling
no flags
Patch (manual) (7.66 KB, patch)
2018-03-13 08:10 PDT, Ross Kirsling
no flags
Patch (manual) (7.66 KB, patch)
2018-03-13 08:12 PDT, Ross Kirsling
no flags
Per Arne Vollan
Comment 1 2017-11-05 12:33:47 PST
Updated test expectations in <https://trac.webkit.org/changeset/224470/webkit>.
Ross Kirsling
Comment 2 2018-03-01 15:13:27 PST
(Original ticket: https://bugs.webkit.org/show_bug.cgi?id=179020) I was going to address this, but it appears that TestOptions is purely ObjC in spite of being in DRT root: https://github.com/WebKit/webkit/blob/master/Tools/DumpRenderTree/TestOptions.h Seems like that ought to be dealt with first?
Ross Kirsling
Comment 3 2018-03-12 18:54:49 PDT
Ross Kirsling
Comment 4 2018-03-13 08:10:08 PDT
Created attachment 335695 [details] Patch (manual) Resubmitting patch now that WinCairo build has restabilized.
Ross Kirsling
Comment 5 2018-03-13 08:12:13 PDT
Created attachment 335696 [details] Patch (manual)
Per Arne Vollan
Comment 6 2018-03-13 09:50:41 PDT
Comment on attachment 335696 [details] Patch (manual) R=me.
WebKit Commit Bot
Comment 7 2018-03-13 10:16:32 PDT
Comment on attachment 335696 [details] Patch (manual) Clearing flags on attachment: 335696 Committed r229578: <https://trac.webkit.org/changeset/229578>
WebKit Commit Bot
Comment 8 2018-03-13 10:16:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-03-13 10:17:18 PDT
Note You need to log in before you can comment on or make changes to this bug.