[Win] Layout Test fast/html/menuitem-element.html is failing. https://bugs.webkit.org/show_bug.cgi?id=179299

Reviewed by Per Arne Vollan.

Source/WebKitLegacy/win:

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::menuItemElementEnabled):
(WebPreferences::setMenuItemElementEnabled):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):
Add private web preference "menuItemElementEnabled".

Tools:

* DumpRenderTree/win/DumpRenderTree.cpp:
(setWebPreferencesForTestOptions):
Recognize test option "enableMenuItemElement".

LayoutTests:

* platform/win/TestExpectations:
Remove "failure" line.


Canonical link: https://commits.webkit.org/199264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229578 268f45cc-cd09-0410-ab3c-d52691b4dbfc